# Foresee

./: .gitattributes  .gitignore  DESIGN_REVIEW.md  INSIGHTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/: evaluate_modes.py  figure_mode_collapse.py  mine_precursors.py  nhtsa_insights.py  safety_scoreboard.py
assets/insights/: mode_quality.csv  precursor_mix.csv  safety_scoreboard.csv  tesla_crash_summary.csv
conda/: environment.yml  install.sh
dashboard/: app.py
demo/: README.md
demo/data/.foresee_cache/val-v2-a32-l64-p20-h50-f60-r50/: 00010486-9a07-48ae-b493-cf4545855937.npz  0006ca28-fcbb-4ae2-9d9e-951fa3b41c1c.npz  0007df76-c9a2-47aa-83bf-3b2b414109c9.npz  0015197d-b916-43b6-bcaa-8a7d90d7b87d.npz  00195499-be19-4cfb-867a-f6a78c43f51c.npz  001f9701-34f9-4811-bcbb-8cf1a412fb0e.npz  003363ad-fa78-45f9-a8d7-716f4ea6d586.npz  00351569-255c-433e-b97b-e2a844d1b6e0.npz  0058ed53-93bf-42a7-9bba-6df3f6ce20f5.npz  0067cf62-4775-425e-8edc-28fd8622b920.npz  (+8 more)
scripts/: download_av2.sh
src/foresee/: __init__.py  agent_intent.py  anchors.py  audit.py  checkpoint.py  config.py  inference.py  intent.py  losses.py  metrics.py  playback.py  precursors.py  risk.py  train.py  visualization.py
src/foresee/data/: __init__.py  dataset.py  features.py  synthetic.py
src/foresee/models/: __init__.py  anchored_transformer.py  lane_transformer.py
tests/: conftest.py  smoke_test.py  test_anchors.py  test_features.py  test_intent.py  test_losses.py  test_metrics.py  test_risk.py
(+33 files in other folders)
